log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 05:39:11 PM UTC: 
 tests:  0|6
total_score: 0/70
e6c1669
Fri 31 Mar 2023 05:50:38 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:36: error: expected ‘)’ before ‘;’ token
   17 |   list->data = malloc(sizeof(void*);
      |                      ~             ^
      |                                    )
arraylist.c:18:15: error: expected ‘;’ before ‘}’ token
   18 |   return list;
      |               ^
      |               ;
   19 | }
      | ~              
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8bb3d5a
Fri 31 Mar 2023 05:50:52 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d636477
Fri 31 Mar 2023 05:54:05 PM UTC: 
 arraylist.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
65eee5c
Fri 31 Mar 2023 05:54:38 PM UTC: 
 arraylist.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
e6014a3
Fri 31 Mar 2023 05:56:58 PM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
419a06f
Fri 31 Mar 2023 05:57:22 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a80d434
Fri 31 Mar 2023 06:01:13 PM UTC: 
 arraylist.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
48d0f99
Fri 31 Mar 2023 06:02:30 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|4
total_score: 20/70
0b788e0
Fri 31 Mar 2023 06:11:14 PM UTC: 
 arraylist.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|0
6bda0d5
Fri 31 Mar 2023 06:11:37 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5b4fec4
Fri 31 Mar 2023 06:13:33 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9b3c622
Fri 31 Mar 2023 06:13:46 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
6d2c95e
Fri 31 Mar 2023 06:16:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d259bc3
Fri 31 Mar 2023 06:16:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
388d1da
Fri 31 Mar 2023 06:17:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c249dc6
Fri 31 Mar 2023 06:17:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
9662941
Fri 31 Mar 2023 06:18:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
8b7c145
Fri 31 Mar 2023 06:18:28 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
1ae2b5b
Fri 31 Mar 2023 06:24:17 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
b5eb991
Fri 31 Mar 2023 06:24:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6ed6784
Fri 31 Mar 2023 06:25:17 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|2
total_score: 40/70
de082ef
Fri 31 Mar 2023 06:30:16 PM UTC: 
 arraylist.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  8|2
total_score: 40/70
2291062
Fri 31 Mar 2023 06:30:33 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a5c45ca
Fri 31 Mar 2023 06:30:41 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|2
total_score: 40/70
c77ba0f
